dataset1235/2025-2/610742602/users/59982477/executions/2563853024_1559799913.log
== SUBMISSION (2025-09-02 20:16:52)
-- CODE: 
numero = int(input())
quadrado = numero **2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:11:33)
-- CODE: 
numero = input(x)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(x)
                   ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(x)
                   ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(x)
                   ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(x)
                   ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(x)
                   ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    numero = input(x)
                   ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:15:11)
-- CODE: 
numero = int(input())
quadrado = int(input())
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = int(input())
                   ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = int(input())
                   ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = int(input())
                   ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = int(input())
                   ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = int(input())
                   ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = int(input())
                   ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
